--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-swiper-flatlist": "^3.2.5",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^8.0.0",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
