--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@react-native-clipboard/clipboard": "^1.14.2",
+    "@react-navigation/drawer": "^7.0.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^1.9.1",
     "react": "18.2.0",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.73.5",
     "react-native-avoid-softinput": "^4.0.1",
     "react-native-debugger-open": "^0.4.3",
