--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@react-native-clipboard/clipboard": "^1.14.2",
-    "@react-navigation/drawer": "^7.0.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/drawer": "^6.6.3",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^3.14.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^1.9.1",
     "react": "18.2.0",
