--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "react": "18.2.0",
     "react-hook-form": "^7.53.2",
+    "react-native-raw-bottom-sheet": "^2.2.1",
     "react-native": "0.73.5",
     "react-native-avoid-softinput": "^4.0.1",
     "react-native-debugger-open": "^0.4.3",
