--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@react-native-clipboard/clipboard": "^1.14.2",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/drawer": "^6.6.3",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^3.14.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^1.9.1",
     "react": "18.2.0",
     "react-hook-form": "^7.53.2",
-    "react-native-raw-bottom-sheet": "^2.2.1",
     "react-native": "0.73.5",
     "react-native-avoid-softinput": "^4.0.1",
     "react-native-debugger-open": "^0.4.3",
     "react-native-flipper": "^0.267.1",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-raw-bottom-sheet": "^2.2.1",
+    "react-native-reanimated": "^3.14.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-share": "^11.0.3",
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^8.0.0",
